# mbed

./: .gitignore  doxyfile_options
connectivity/drivers/nfc/PN512/: CMakeLists.txt
connectivity/nfc/: CMakeLists.txt  GoogleTest-CMakeLists.txt.in
connectivity/nfc/docs/: nfc_design.md
connectivity/nfc/libraries/stack/: CMakeLists.txt
connectivity/nfc/libraries/stack/tech/isodep/: isodep_target.c  isodep_target.h
connectivity/nfc/libraries/stack/test/: CMakeLists.txt  fake_nfc_scheduler_timer.cpp  fake_nfc_scheduler_timer.h  nfc_scheduler_timer.cpp  nfc_scheduler_timer.h
connectivity/nfc/libraries/stack/test/tech/isodep/: isodep_target.cpp  mock_transceiver.cpp  mock_transceiver.h
docs/: README.md  conf.py  index.rst  requirements.txt
docs/adr/: index.rst
docs/api/: bluetooth.rst  drivers.rst  index.rst
docs/design-documents/: index.rst  nfc
drivers/: CMakeLists.txt
drivers/include/drivers/: DigitalIn.h  DigitalOut.h  SPI.h
features/FEATURE_BLE/ble/pal/: GapEvents.h
features/FEATURE_BLE/source/generic/: GenericSecurityManager.cpp
features/FEATURE_BLE/targets/TARGET_CORDIO/source/: CordioBLE.cpp
features/FEATURE_BLE/targets/TARGET_NORDIC/TARGET_NRF5x/source/: nRF5XPalGattClient.cpp  nRF5xGap.cpp  nRF5xGap.h  nRF5xGattServer.cpp  nRF5xn.cpp
features/FEATURE_BLE/targets/TARGET_NORDIC/TARGET_NRF5x/source/btle/: btle.cpp  btle.h  btle_security_pm.cpp
features/FEATURE_BLE/targets/TARGET_NORDIC/TARGET_NRF5x/source/btle/custom/: custom_helper.cpp
features/nfc/source/controllers/: PN512TransportDriver.cpp
features/nfc/source/nfc/: NFCRemoteInitiator.cpp
features/nfc/stack/: nfc_errors.h
features/nfc/stack/ndef/: ndef.c  ndef.h
features/nfc/stack/tech/iso7816/: iso7816.c  iso7816.h  iso7816_app.h  iso7816_defs.h
features/nfc/stack/tech/isodep/: isodep.h  isodep_target.c  isodep_target.h
features/nfc/stack/tech/type4/: type4_target.c  type4_target.h
features/nfc/stack/transceiver/: protocols.h  transceiver.c  transceiver.h  transceiver_internal.h
features/nfc/stack/transceiver/pn512/: pn512.c  pn512.h  pn512_callback.h  pn512_cmd.c  pn512_cmd.h  pn512_hw.c  pn512_hw.h  pn512_internal.h  pn512_irq.c  pn512_irq.h  pn512_poll.c  pn512_poll.h  pn512_registers.c  pn512_registers.h  pn512_rf.c  pn512_rf.h  pn512_timer.c  pn512_timer.h  pn512_transceive.c  pn512_transceive.h  pn512_types.h
targets/: targets.json
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52832/config/: sdk_config.h
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52832/device/TOOLCHAIN_ARM_STD/: nRF52832.sct
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52832/device/TOOLCHAIN_GCC_ARM/: NRF52832.ld
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52832/device/TOOLCHAIN_IAR/: nRF52832.icf
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52840/config/: sdk_config.h
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_14_2/TARGET_SOFTDEVICE_S132/: mbed_lib.json
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_14_2/TARGET_SOFTDEVICE_S140/: mbed_lib.json
